[package]
name = "build_crystal"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Flor"]
description = "High-performance Rust library for generating 3D crystal lattices and computing Debye scattering intensities"
license = "MIT"
repository = "https://github.com/AlbertKurtz/rust_py_lib"
homepage = "https://github.com/AlbertKurtz/rust_py_lib"
documentation = "https://docs.rs/build_crystal"
keywords = ["crystal", "scattering", "debye", "crystallography", "physics"]
categories = ["science", "algorithms"]
readme = "README.md"
[lib]
name = "build_crystal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
rayon = "1.8"
