[package]
name = "fast_dse"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Flor"]
description = "High-performance Rust library for generating 3D crystal lattices (simple cubic) and computing Debye scattering intensities (monoatomic crystals)"
license = "MIT"
repository = "https://github.com/AlbertKurtz/fast_dse"
homepage = "https://github.com/AlbertKurtz/fast_dse"
documentation = "https://docs.rs/fast_dse"
keywords = ["crystal", "scattering", "debye", "crystallography", "physics"]
categories = ["science", "algorithms"]
readme = "README.md"
[lib]
name = "fast_dse"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
rayon = "1.8"
